fix z-index to prevent checkout drawer overlap

--- a/_scss/_layout/_product-gallery.scss
+++ b/_scss/_layout/_product-gallery.scss
@@ -60,7 +60,7 @@ body.home .product-gallery {
             .product-info {
                 grid-row: 1;
                 grid-column: 1 / 1;
-                z-index: 9999;
+                z-index: 2;
                 background-color: $white;
                 padding: $base-spacing/2;
                 box-shadow: $shadow;
